unsupported/static_h/external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-method.js
async f() { class X { async await(){} } }
